--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 :root {
   --index: calc(1vw + 1vh);
   min-height: 100vh;
   text-decoration: none;
 }
+
 body {
+  font-family: "Lora", serif;
   background-color: rgb(222, 245, 246);
 }
 
